filter label z-index desktop fix

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -678,7 +678,7 @@ label{
     height: 240px;
   }
   #filter-layout3-filter-layout3 .js-heightAnimation .filter-entry .btn-search ~ div {
-    z-index: 3;
+    z-index: 2;
   }
 }
 
